fixed datatable bug and add main function

--- a/src/Fostor.Ginkgo.Web.Mvc/Views/Shared/Components/DatePicker/Default.cshtml
+++ b/src/Fostor.Ginkgo.Web.Mvc/Views/Shared/Components/DatePicker/Default.cshtml
@@ -12,8 +12,8 @@
 
 <div class="input-group date datepicker-component" >
     <div class="form-line">
-        <input type="text" name="@Model.TagName" value="@Model.Value" class="form-control">
+        <input type="text" class="form-control" name="@Model.TagName" value="@Model.Value" @(Model.IsDisabled ? "disabled" : "") @(Model.IsRequired == true ? "required" : "")>
     </div>
-    <span class="input-group-addon"><i class="glyphicon glyphicon-th"></i></span>
+    <span class="input-group-addon"><i class="glyphicon glyphicon-calendar"></i></span>
 </div>
 
