--- a/src/Fostor.Ginkgo.Web.Mvc/Areas/_ViewImports.cshtml
+++ b/src/Fostor.Ginkgo.Web.Mvc/Areas/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using Abp.Localization
+@using Fostor.Ginkgo.Web
 @inherits Fostor.Ginkgo.Web.Views.GinkgoRazorPage<TModel>
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @addTagHelper *, Fostor.Ginkgo.Web.Mvc
