--- a/src/Fostor.Ginkgo.Web.Mvc/Views/Users/Index.cshtml
+++ b/src/Fostor.Ginkgo.Web.Mvc/Views/Users/Index.cshtml
@@ -43,7 +43,7 @@
                             <th>@L("IsActive")</th>
                             <th style="text-align:center;">@L("Edit")</th>
                             <th style="text-align:center;">@L("Delete")</th>
-                            <th>@L("NameSurname")</th>
+                            <th>@L("DisplayName")</th>
                             <th style="min-width:100px;">@L("EmailAddress")</th>
                         </tr>
                     </thead>
