--- a/src/Fostor.Ginkgo.Web.Mvc/Areas/Admin/Views/DataDict/Index.cshtml
+++ b/src/Fostor.Ginkgo.Web.Mvc/Areas/Admin/Views/DataDict/Index.cshtml
@@ -1,9 +1,10 @@
 ﻿@using Fostor.Ginkgo.Web.Startup
 @using Fostor.Ginkgo.Web.Areas.Admin.Models
 @using Fostor.Ginkgo.Web.Views.Shared.Components.DataConfigSelector
+@using Fostor.Ginkgo.Web.Views.Shared.Components.CommonModal
 @{
     ViewData["Title"] = "DataDictionary";
-    ViewBag.CurrentPageName = "Admin.DataDict"; //The menu item will be active for this page.    
+    ViewBag.CurrentPageName = "Admin.DataDict"; //The menu item will be active for this page.
 }
 @section scripts
     {
@@ -17,23 +18,23 @@
 <div class="row clearfix">
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
         <div class="card">
-            <div class="header" >
+            <div class="header">
                 <h2>
                     @L("DataDictionary")
                 </h2>
                 <form name="SearchForm" role="form" novalidate class="form-validation form-horizontal">
-                <div class="form-group">
-                    <label class="col-md-2 control-label" >@L("CategoryCode")</label>
-                    <div class="col-md-4">
-                        @await Component.InvokeAsync(typeof(DataConfigSelectorViewComponent), new { configCode = "DataDictCategoryCode", tagName = "CategoryCode" })
+                    <div class="form-group">
+                        <label class="col-md-2 control-label">@L("CategoryCode")</label>
+                        <div class="col-md-4">
+                            @await Component.InvokeAsync(typeof(DataConfigSelectorViewComponent), new { configCode = "DataDictCategoryCode", tagName = "CategoryCode" })
+                        </div>
                     </div>
-                </div>
                 </form>
             </div>
             <button type="button" class="btn btn-primary btn-circle waves-effect waves-circle waves-float pull-right" data-toggle="modal" data-target="#DataDictCreateModal">
                 <i class="material-icons">add</i>
             </button>
-            <div  class="datatables-container m-r-30">
+            <div class="datatables-container m-r-30">
                 <table id="table_100" class="table table-condensed table-bordered" style="min-width:100%;">
                     <thead>
                         <tr>
@@ -53,39 +54,35 @@
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title">
-                    <span>@L("CreateNewDataDictionary")</span>
-                </h4>
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true"></button>
+                <div class="col-md-8">
+                    <h4 class="modal-title m-l--15">
+                        <span>@L("CreateNewDataDictionary")</span>
+                    </h4>
+                </div>
+                <span class="close pull-right" data-dismiss="modal"><i class="material-icons ">close</i></span>
             </div>
             <div class="modal-body">
-                <form name="DataDictCreateForm" role="form" novalidate class="form-validation form-horizontal">                   
+                <form name="DataDictCreateForm" role="form" novalidate class="form-validation form-horizontal">
                     <bs-row>
-                        <bs-label>@L("CategoryCode")</bs-label>
-                        <bs-input bs-width="10" name="CategoryCode"  maxlength="50" requried="requried"></bs-input>
+                        <bs-label>@L("CategoryCode")<bs-star></bs-star></bs-label>
+                        <bs-input bs-width="10" name="CategoryCode" maxlength="50" requried="requried"></bs-input>
                     </bs-row>
                     <bs-row>
-                        <bs-label>@L("Key")</bs-label>
-                        <bs-input bs-width="10" name="Key"  maxlength="50" requried="requried"></bs-input>
+                        <bs-label>@L("Key")<bs-star></bs-star></bs-label>
+                        <bs-input bs-width="10" name="Key" maxlength="50" requried="requried"></bs-input>
                     </bs-row>
                     <bs-row>
                         <bs-label>@L("Value")</bs-label>
-                        <bs-input bs-width="10" name="Value"  maxlength="1000"></bs-input>
+                        <bs-input bs-width="10" name="Value" maxlength="1000"></bs-input>
                     </bs-row>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-default waves-effect" data-dismiss="modal">@L("Cancel")</button>
-                        <button type="submit" class="btn btn-primary waves-effect">@L("Save")</button>
-                    </div>
                 </form>
-
+            </div>
+            <div class="modal-footer">
+                <button type="submit" class="btn btn-primary waves-effect">@L("Save")</button>
             </div>
         </div>
     </div>
 </div>
-<div class="modal fade" id="DataDictEditModal" tabindex="-1" role="dialog" aria-labelledby="DataDictEditModalLabel" data-backdrop="static">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-
-        </div>
-    </div>
-</div>
+@await Component.InvokeAsync(typeof(CommonModalViewComponent), new { modalName = "DataDictEdit", modalTitle = @L("EditDataDictionary"),width="600px",height="320px" })
 
