--- a/src/Fostor.Ginkgo.Web.Mvc/wwwroot/css/style.css
+++ b/src/Fostor.Ginkgo.Web.Mvc/wwwroot/css/style.css
@@ -2817,7 +2817,7 @@ section.content {
   min-height: 50px;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
   position: relative;
-  margin-bottom: 30px; }
+  margin-bottom: 0px; }
   .card .card-inside-title {
     margin-top: 25px;
     margin-bottom: 15px;
@@ -2939,7 +2939,7 @@ section.content {
       color: #555; }
   .card .header {
     color: #555;
-    padding: 20px;
+    padding: 5px;
     position: relative;
     border-bottom: 1px solid rgba(204, 204, 204, 0.35); }
     .card .header .header-dropdown {
@@ -2961,7 +2961,7 @@ section.content {
         .card .header .header-dropdown i:hover {
           color: #000; }
     .card .header h2 {
-      margin: 0;
+      margin: 5px;
       font-size: 18px;
       font-weight: normal;
       color: #111; }
@@ -2984,62 +2984,62 @@ section.content {
     .card .body .col-sm-1,
     .card .body .col-md-1,
     .card .body .col-lg-1 {
-      margin-bottom: 20px; }
+      margin-bottom: 5px; }
     .card .body .col-xs-2,
     .card .body .col-sm-2,
     .card .body .col-md-2,
     .card .body .col-lg-2 {
-      margin-bottom: 20px; }
+      margin-bottom: 5px; }
     .card .body .col-xs-3,
     .card .body .col-sm-3,
     .card .body .col-md-3,
     .card .body .col-lg-3 {
-      margin-bottom: 20px; }
+      margin-bottom: 5px; }
     .card .body .col-xs-4,
     .card .body .col-sm-4,
     .card .body .col-md-4,
     .card .body .col-lg-4 {
-      margin-bottom: 20px; }
+      margin-bottom: 5px; }
     .card .body .col-xs-5,
     .card .body .col-sm-5,
     .card .body .col-md-5,
     .card .body .col-lg-5 {
-      margin-bottom: 20px; }
+      margin-bottom: 5px; }
     .card .body .col-xs-6,
     .card .body .col-sm-6,
     .card .body .col-md-6,
     .card .body .col-lg-6 {
-      margin-bottom: 20px; }
+      margin-bottom: 5px; }
     .card .body .col-xs-7,
     .card .body .col-sm-7,
     .card .body .col-md-7,
     .card .body .col-lg-7 {
-      margin-bottom: 20px; }
+      margin-bottom: 5px; }
     .card .body .col-xs-8,
     .card .body .col-sm-8,
     .card .body .col-md-8,
     .card .body .col-lg-8 {
-      margin-bottom: 20px; }
+      margin-bottom: 5px; }
     .card .body .col-xs-9,
     .card .body .col-sm-9,
     .card .body .col-md-9,
     .card .body .col-lg-9 {
-      margin-bottom: 20px; }
+      margin-bottom: 5px; }
     .card .body .col-xs-10,
     .card .body .col-sm-10,
     .card .body .col-md-10,
     .card .body .col-lg-10 {
-      margin-bottom: 20px; }
+      margin-bottom: 5px; }
     .card .body .col-xs-11,
     .card .body .col-sm-11,
     .card .body .col-md-11,
     .card .body .col-lg-11 {
-      margin-bottom: 20px; }
+      margin-bottom: 5px; }
     .card .body .col-xs-12,
     .card .body .col-sm-12,
     .card .body .col-md-12,
     .card .body .col-lg-12 {
-      margin-bottom: 20px; }
+      margin-bottom: 5px; }
 
 /* Infobox ===================================== */
 .info-box {
