add column search for task module

--- a/src/Fostor.Ginkgo.Web.Mvc/Areas/TaskFlow/Views/Flow/MyFlowList.cshtml
+++ b/src/Fostor.Ginkgo.Web.Mvc/Areas/TaskFlow/Views/Flow/MyFlowList.cshtml
@@ -38,7 +38,7 @@
                     </div>
                     <div class="col-md-8">
                         <span class="label" style="color:#009688;font-size:medium;">@L("FlowRouteConfig")</span><span id="lb_flow_route"></span>
-                        <div id="route_panel" class="panel panel-info">
+                        <div id="route_panel" >
                             <input type="hidden" id="txt_task_code" />
                             <table id="table_100" class="table table-condensed table-bordered" style="width:100%;">
                                 <thead>
