--- a/src/Fostor.Ginkgo.Web.Mvc/Areas/TaskFlow/Views/Task/MonitorList.cshtml
+++ b/src/Fostor.Ginkgo.Web.Mvc/Areas/TaskFlow/Views/Task/MonitorList.cshtml
@@ -65,6 +65,22 @@
                             <th style="min-width:100px;">@L("CreationTime")</th>
                         </tr>
                     </thead>
+                    <tfoot>
+                        <tr>
+                            <th>@L("InstanceCode")</th>
+                            <th>@L("TaskName")</th>
+                            <th>@L("View")</th>
+                            <th>@L("KeyInfo")</th>
+                            <th>@L("Status")</th>
+                            <th>@L("Originator")</th>
+                            <th>@L("LastPhaseHandleTime")</th>
+                            <th>@L("CurrentActors")</th>
+                            <th>@L("LastModifier")</th>
+                            <th>@L("LastModificationTime")</th>
+                            <th>@L("Creator")</th>
+                            <th style="min-width:100px;">@L("CreationTime")</th>
+                        </tr>
+                    </tfoot>
                 </table>
             </div>
         </div>
