--- a/src/Fostor.Ginkgo.Web.Mvc/Views/Shared/_Layout.cshtml
+++ b/src/Fostor.Ginkgo.Web.Mvc/Views/Shared/_Layout.cshtml
@@ -223,7 +223,7 @@
     <script src="~/lib/abp-web-resources/Abp/Framework/scripts/libs/abp.signalr-client.js" asp-append-version="true"></script>
 
 
-    @WebResourceManager.RenderScripts();
+    @WebResourceManager.RenderScripts()
 
     <!-- View specific scripts -->
     @RenderSection("scripts", required: false)
