--- a/src/Fostor.Ginkgo.Web.Mvc/Areas/TaskFlow/Views/Flow/AddFlow.cshtml
+++ b/src/Fostor.Ginkgo.Web.Mvc/Areas/TaskFlow/Views/Flow/AddFlow.cshtml
@@ -16,7 +16,7 @@
 <div class="row clearfix">
     <div class="col-lg-12 col-md-12 col-sm-12 col-xs-12">
         <div class="card">
-            <div class="header" style="margin-bottom:-30px;">
+            <div class="header" >
                 <h2>
                     @L("AddFlow")
                 </h2>
