--- a/src/Fostor.Ginkgo.Web.Mvc/Areas/TaskFlow/Views/Flow/Index.cshtml
+++ b/src/Fostor.Ginkgo.Web.Mvc/Areas/TaskFlow/Views/Flow/Index.cshtml
@@ -40,15 +40,14 @@
                         <div class="col-md-2">
                             <button type="button" id="btnSearch" class="btn btn-primary waves-effect btn-xs" style="margin-left:20px;"><i class="small material-icons">search</i></button>
                         </div>
+                        <button type="button" class="btn btn-primary btn-circle waves-effect waves-circle waves-float pull-right add-flow">
+                            <i class="material-icons">add</i>
+                        </button>
                     </div>
                 </form>
-
-            </div>
-            <button type="button" class="btn btn-primary btn-circle waves-effect waves-circle waves-float pull-right add-flow">
-                <i class="material-icons">add</i>
-            </button>
-            <div class="datatables-container table-responsive">
-                <table id="table_100" class="table table-condensed table-bordered">
+            </div>            
+            <div class="m-l-15 m-r-15">
+                <table id="table_100" class="table table-condensed table-bordered" style="min-width:100%">
                     <thead>
                         <tr>
                             <th>@L("TaskCode")</th>
@@ -67,9 +66,30 @@
                             <th>@L("LastModifier")</th>
                             <th>@L("LastModificationTime")</th>
                             <th>@L("Creator")</th>
-                            <th style="min-width:100px;">@L("CreationTime")</th>
+                            <th>@L("CreationTime")</th>
                         </tr>
                     </thead>
+                    <tfoot>
+                        <tr>
+                            <th>@L("TaskCode")</th>
+                            <th>@L("TaskName")</th>
+                            <th>@L("Edit")</th>
+                            <th>@L("Delete")</th>
+                            <th>@L("TaskDescription")</th>
+                            <th>@L("UseConditionControl")</th>
+                            <th>@L("CanAppendPhase")</th>
+                            <th>@L("Revocable")</th>
+                            <th>@L("KeyInfoTemplate")</th>
+                            <th>@L("FormUriTemplate")</th>
+                            <th>@L("IsDefaultForAllUser")</th>
+                            <th>@L("FinalServiceTemplate")</th>
+                            <th>@L("StartServiceTemplate")</th>
+                            <th>@L("LastModifier")</th>
+                            <th>@L("LastModificationTime")</th>
+                            <th>@L("Creator")</th>
+                            <th>@L("CreationTime")</th>
+                        </tr>
+                    </tfoot>
                 </table>
             </div>
         </div>
