--- a/src/Fostor.Ginkgo.Web.Mvc/Areas/TaskFlow/Views/Task/ToDoList.cshtml
+++ b/src/Fostor.Ginkgo.Web.Mvc/Areas/TaskFlow/Views/Task/ToDoList.cshtml
@@ -53,13 +53,28 @@
                             <th>@L("KeyInfo")</th>
                             <th>@L("Status")</th>
                             <th>@L("Originator")</th>
-                            <th>@L("LastPhaseHandleTime")</th>                            
+                            <th>@L("LastPhaseHandleTime")</th>
                             <th>@L("LastModifier")</th>
                             <th>@L("LastModificationTime")</th>
                             <th>@L("Creator")</th>
                             <th style="min-width:100px;">@L("CreationTime")</th>
                         </tr>
                     </thead>
+                    <tfoot>
+                        <tr>
+                            <th>@L("InstanceCode")</th>
+                            <th>@L("TaskName")</th>
+                            <th>@L("View")</th>
+                            <th>@L("KeyInfo")</th>
+                            <th>@L("Status")</th>
+                            <th>@L("Originator")</th>
+                            <th>@L("LastPhaseHandleTime")</th>
+                            <th>@L("LastModifier")</th>
+                            <th>@L("LastModificationTime")</th>
+                            <th>@L("Creator")</th>
+                            <th style="min-width:100px;">@L("CreationTime")</th>
+                        </tr>
+                    </tfoot>
                 </table>
             </div>           
         </div>
