Update language text

--- a/src/Fostor.Ginkgo.Web.Mvc/Areas/Admin/Views/DataDict/_EditModal.cshtml
+++ b/src/Fostor.Ginkgo.Web.Mvc/Areas/Admin/Views/DataDict/_EditModal.cshtml
@@ -11,11 +11,11 @@
         <bs-input bs-width="10" name="CategoryCode" value="@Model.DataDictionaryDto.CategoryCode" maxlength="50" readonly="readonly"></bs-input>
     </bs-row>
     <bs-row>
-        <bs-label>@L("Key")<bs-star></bs-star></bs-label>
+        <bs-label>@L("DataKey")<bs-star></bs-star></bs-label>
         <bs-input bs-width="10" name="Key" value="@Model.DataDictionaryDto.Key" maxlength="50" requried="requried"></bs-input>
     </bs-row>
     <bs-row>
-        <bs-label>@L("Value")</bs-label>
+        <bs-label>@L("DataValue")</bs-label>
         <bs-input bs-width="10" name="Value" value="@Model.DataDictionaryDto.Value" maxlength="1000"></bs-input>
     </bs-row>
 </form>
