--- a/src/Fostor.Ginkgo.Web.Mvc/Areas/Admin/Views/SysObject/_EditModal.cshtml
+++ b/src/Fostor.Ginkgo.Web.Mvc/Areas/Admin/Views/SysObject/_EditModal.cshtml
@@ -75,7 +75,7 @@
     </div>
     <div class="row clearfix">
         <div class="col-sm-12">
-            <h4>Permissions</h4>
+            <h4>@L("Permissions")</h4>
             @foreach (var permission in Model.AllPermissions)
             {
                 <div class="col-sm-3">
