--- a/src/Fostor.Ginkgo.Web.Mvc/Areas/Admin/Views/DataDict/Index.cshtml
+++ b/src/Fostor.Ginkgo.Web.Mvc/Areas/Admin/Views/DataDict/Index.cshtml
@@ -39,8 +39,8 @@
                     <thead>
                         <tr>
                             <th>@L("CategoryCode")</th>
-                            <th>@L("Key")</th>
-                            <th style="min-width:100px;">@L("Value")</th>
+                            <th>@L("DataKey")</th>
+                            <th>@L("DataValue")</th>
                             <th>@L("Edit")</th>
                             <th>@L("Delete")</th>
                         </tr>
@@ -69,11 +69,11 @@
                         <bs-input bs-width="10" name="CategoryCode" maxlength="50" requried="requried"></bs-input>
                     </bs-row>
                     <bs-row>
-                        <bs-label>@L("Key")<bs-star></bs-star></bs-label>
+                        <bs-label>@L("DataKey")<bs-star></bs-star></bs-label>
                         <bs-input bs-width="10" name="Key" maxlength="50" requried="requried"></bs-input>
                     </bs-row>
                     <bs-row>
-                        <bs-label>@L("Value")</bs-label>
+                        <bs-label>@L("DataValue")</bs-label>
                         <bs-input bs-width="10" name="Value" maxlength="1000"></bs-input>
                     </bs-row>
                 </form>
